# dlib

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yaml
pydlib/: __init__.py
src/: dlib.py
src/pydlib/: __init__.py  dlib.py
