[build-system]
requires = [ "setuptools>=42", "wheel" ]
build-backend = "setuptools.build_meta"

[project]
name = "pydlib"
authors = [
    { name = "Diego Giorgini, Luigi Di Sotto", email = "diego.giorgini@aitechnologies.it" }
]
description = "The Dictionary Library."
version = "0.3.3"
requires-python = ">=3.7"
dependencies = [
    "flatten-dict"
]
dynamic = ["readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

